2022-02-02 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCdwarf2.c,
	  src/SDCCutil.c,
	  src/SDCCutil.h:
	  Add string escaping to dwWriteString.

2022-02-02 Benedikt Freisen <b.freisen AT gmx.net>

	* sdas/asxxsrc/asmain.c:
	  Fix bug #2970 via trivial patch by David Grayson.

2022-02-02 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/device/lib/mos6502/Makefile.in:
      Enable optimization for the library.
    * sdcc/src/mos6502/gen.c:
      Commented out code that triggers bug-477927 regression.
    * sdcc/src/mos6502/peep.def:
      Add rule to optimize function entry.

2022-02-02 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Implement cost based on both code size and cycles.

2022-02-01 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix several bugs in the code generator.

2022-02-01 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/device/lib/mos6502/__memcpy.c,
      sdcc/device/lib/mos6502/_mulint.s,
      sdcc/device/lib/mos6502/_mullong.s,
      sdcc/device/lib/mos6502/_divuint.s,
      sdcc/device/lib/mos6502/_divulong.s,
      sdcc/device/lib/mos6502/_strcmp.s,
      sdcc/device/lib/mos6502/_strcpy.s:
      Implement additional library functions in assembly.

2022-02-01 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/Makefile.in:
	  Do not run mos6502 and mcs51-xstack-auto tests for all target, since they have extra dependencies.
	* support/regression/ports/*/spec.mk:
	  Increase some timeouts in hope of making the bug-3129 regression test pass on that slow PPC Mac in the compile farm.
	* support/regression/tests/gcc-torture-execute-920711-1.c,
	  support/regression/tests/gcc-torture-execute-941021-1.c:
	  Disable two tests for hosts with older gcc, where they apparently fail.

2022-01-31 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/device/lib/mos6502/_mulint.c,
      sdcc/device/lib/mos6502/_mulint.s,
      sdcc/device/lib/mos6502/_mullong.s,