@@ -93,12 +93,13 @@ usage (void)
            "  -s romsize     size of the binary file (default: rom banks * 16384)\n"
            "  -Z             generate GameBoy format binary file\n"
            "  -S             generate Sega Master System format binary file\n"
+           "  -o bytes       skip amount of bytes in binary file\n"
 
            "SMS format options (applicable only with -S option):\n"
-           "  -xo n          rom size (0xa-0x2)\n"
-           "  -xj n          set region code (3-7)\n"
+           "  -xo n          rom size (0xa-0x2) (default: 0xc)\n"
+           "  -xj n          set region code (3-7) (default: 4)\n"
            //"  -xc n          product code (0-159999)\n"
-           "  -xv n          version number (0-15)\n"
+           "  -xv n          version number (0-15) (default: 0)\n"
            //"  -xV n          SDSC version number\n"
            //"  -xd n          SDSC date\n"
            //"  -xA n          SDSC author pointer\n"
@@ -688,7 +689,7 @@ read_ihx (FILE *fin, BYTE **rom, int *size, int *real_size, struct gb_opt_s *o)
 int
 main (int argc, char **argv)
 {
-  int size = 32768, pack = 0, real_size = 0, i = 0;
+  int size = 32768, offset = 0, pack = 0, real_size = 0, i = 0;
   char *token;
   BYTE *rom;
   FILE *fin, *fout;
@@ -711,8 +712,9 @@ main (int argc, char **argv)
                             .do_logo_copy=true,
                             .address_overwrite={0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0, 0xFF, 0} };
 
-  struct sms_opt_s sms_opt = {.rom_size=0xa,
-                              .region_code=7,
+  // 32KiB, SMS Export, version 0 <- should work with most emulaters (<32K was never used, GG accepts SMS)
+  struct sms_opt_s sms_opt = {.rom_size=0xc,
+                              .region_code=4,
                               .version=0 };
 
 #if defined(_WIN32)
@@ -730,6 +732,15 @@ main (int argc, char **argv)
               return 1;
             }
           size = strtoul (*argv, NULL, 0);
+          break;
+
+        case 'o':
+          if (!*++argv)
+            {
+              usage ();
+              return 1;
+            }
+          offset = strtoul (*argv, NULL, 0);
           break;
 
         case 'h':
@@ -804,6 +815,7 @@ main (int argc, char **argv)
                   usage ();
                   return 1;
                 }
+              // we don't need \0
               strncpy (gb_opt.licensee_str, *argv, 2);
               break;
 
@@ -999,8 +1011,14 @@ main (int argc, char **argv)
                 }
             }
         }
+      // skip offset
+      if (offset > 0)
+        {
+          memmove (rom, rom + offset, size - offset);
+          memset (rom + size - offset, FILL_BYTE, offset);
+        }
 
-      fwrite (rom, 1, (pack ? real_size : size), fout);
+      fwrite (rom, 1, (pack ? real_size : size) - offset, fout);
 
       fclose (fout);
 
